--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,9 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".home.CompassActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".splash.SplashScreenActivity"
+            android:noHistory="true"
+            android:theme="@style/AppTheme.NoActionBar.Fullscreen">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -23,6 +22,12 @@
             </intent-filter>
 
         </activity>
+
+        <activity
+            android:name=".home.CompassActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
 
