--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ ext {
     compileSdkVersion = 27
 
     junitVersion = '4.12'
+    mockitoVersion = '2.12.0'
     testRunnerVersion = '1.0.1'
     espressoVersion = '3.0.1'
 
