add leakcanary to eliminate potential leaks

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     androidTestImplementation "com.android.support.test:runner:$rootProject.testRunnerVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
 
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+
     //support libs
     implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     implementation "com.android.support:support-v4:$rootProject.supportLibraryVersion"
